--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hex Color Generator</h1>
         <div class="main">
             <label>Pick a color</label>
-            <input type="color" id="colorPicker">
+            <input type="color" id="selected_color">
     </div>
     </body>
 </html>
