--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <h1>Hex Color Generator</h1>
         <div class="main">
-            <label>Pick a color</label>
+            <p>Pick a color!</p>
             <input type="color" id="selected_color">
-            <input type="text" id="hexCode">
-    </div>
+            <p id="hexCode"></p>
+        </div>
     </body>
 </html>
